--- a/books.html
+++ b/books.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,166 +9,107 @@
     <!--Customized CSS Styling-->
     <link href="css/main.css" rel="stylesheet" />
     <!-- Bootstrap Core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <!--FontAwesome-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
 
-  <body>
+<body>
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">WALKABOOKS</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <div class="container">
+            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Home
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="books.html">Books</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about-us.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="registration.html">
-                <i class="fa fa-user-circle" style="font-size: 32px"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cart.html">
-                <i class="fa fa-shopping-cart" style="font-size: 32px"></i>
-                <span id="cart-icon-count">0</span>
-              </a>
-            </li>
-          </ul>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="books.html">Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registration.html">
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cart.html">
+                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i>
+                            <span id="cart-icon-count">0</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <main role="main" class="container">
-      <!-- Banner -->
-      <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
-        <img src="images/banner.jpg" class="rounded w-100" alt="Book banner" />
-      </div>
-      <!-- Search Bar for Books -->
-      <div class="search-bar">
-        <form
-          class="form-inline"
-          style="justify-content: center; background-color: #d8dce4"
-        >
-          <div>
-            <h5 style="padding-top: 5px">Search Books</h5>
-          </div>
-          <div class="input-group" style="padding-left: 10px">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Search"
-              aria-label="Search"
-              aria-describedby="basic-addon1"
-            />
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">Go!</span>
-            </div>
-          </div>
-        </form>
-      </div>
-      <!-- End of Search Bar for Books -->
-      <br />
-      <div class="row">
-        <aside
-          class="col-md-4 book-sidebar text-white rounded"
-          style="background-color: #8a9db6"
-        >
-          <h3 class="text-center" style="margin-top: 10px">Select Sections</h3>
-          <div style="width: 80%; padding-left: 20%; margin-top: 20px">
-            <select
-              id="dropdown"
-              name="selection"
-              class="form-control"
-              required
-            >
+        <!-- Banner -->
+        <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
+            <img src="images/banner.jpg" class="rounded w-100" alt="Book banner" />
+        </div>
+        <!-- Search Bar for Books -->
+        <div class="search-bar">
+            <form class="form-inline" style="justify-content: center; background-color: #d8dce4">
+                <div>
+                    <h5 style="padding-top: 5px">Search Books</h5>
+                </div>
+                <div class="input-group" style="padding-left: 10px">
+                    <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1" />
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">Go!</span>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!-- End of Search Bar for Books -->
+        <br />
+        <div class="row">
+            <aside class="col-md-4 book-sidebar text-white rounded" style="background-color: #8a9db6">
+                <h3 class="text-center" style="margin-top: 10px">Select Sections</h3>
+                <div style="width: 80%; padding-left: 20%; margin-top: 20px">
+                    <select id="dropdown" name="selection" class="form-control" required>
               <option disabled selected value>Select Your Option</option>
               <option value="for_beginners">For Beginners</option>
               <option value="database_essentials">Database Essentials</option>
             </select>
-          </div>
-          <div class="p-4 mb-3 mt-3">
-            <h4 class="text-center">For Beginners</h4>
-            <p class="mb-0 text-justify"
-              >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
-              mattis consectetur purus sit amet fermentum. Aenean lacinia
-              bibendum nulla sed consectetur.</p
-            >
-            <br />
-            <p class="mb-0 text-justify"
-              >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
-              mattis consectetur purus sit amet fermentum. Aenean lacinia
-              bibendum nulla sed consectetur.</p
-            >
-          </div>
-          <div class="p-4">
-            <h4 class="text-center">Database Essentials</h4>
-            <p class="mb-0 text-justify"
-              >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
-              mattis consectetur purus sit amet fermentum. Aenean lacinia
-              bibendum nulla sed consectetur.</p
-            >
-            <br />
-            <p class="mb-0 text-justify"
-              >Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras
-              mattis consectetur purus sit amet fermentum. Aenean lacinia
-              bibendum nulla sed consectetur.</p
-            >
-          </div>
-        </aside>
-        <!-- End of Book Sidebar -->
+                </div>
+                <div class="p-4 mb-3 mt-3">
+                    <h4 class="text-center">For Beginners</h4>
+                    <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                    <br />
+                    <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                </div>
+                <div class="p-4">
+                    <h4 class="text-center">Database Essentials</h4>
+                    <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                    <br />
+                    <p class="mb-0 text-justify">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                </div>
+            </aside>
+            <!-- End of Book Sidebar -->
 
-        <!-- Book Display Rows-->
-        <div class="col-md-8 book-main">
-          <div class="book-display">
-            <h2 class="book-display-title">For Beginners</h2>
-            <div class="card-deck">
-              <div class="card">
-                <img
-                  src="images/Coding_for_Beginners.jpg"
-                  class="card-img-top"
-                  alt="Front-End Frameworks"
-                />
-                <div class="card-body">
-                  <h6 class="card-title">Coding for Beginners</h6>
-                  <p class="card-text">$25</p>
-                  <a
-                    href="#"
-                    type="button"
-                    id="add-btn-1"
-                    class="bookcart btn btn-primary"
-                    >Add to Cart</a
+            <!-- Book Display Rows-->
+            <div class="col-md-8 book-main">
+                <div class="book-display">
+                    <h2 class="book-display-title">For Beginners</h2>
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="images/Coding_for_Beginners.jpg" class="card-img-top" alt="Front-End Frameworks" />
+                            <div class="card-body">
+                                <h6 class="card-title">Coding for Beginners</h6>
+                                <p class="card-text">$25</p>
+                                <button href="#" type="button" id="add-btn-1" class="bookcart btn btn-primary">Add to Cart</button
                   >
                 </div>
               </div>
@@ -180,12 +122,12 @@
                 <div class="card-body">
                   <h6 class="card-title">Javascript for Beginners</h6>
                   <p class="card-text">$30</p>
-                  <a
+                  <button
                     href="#"
                     type="button"
                     id="add-btn-2"
                     class="bookcart btn btn-primary"
-                    >Add to Cart</a
+                    >Add to Cart</button
                   >
                 </div>
               </div>
@@ -198,8 +140,8 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Programming For Beginners</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-3" class="bookcart btn btn-primary"
-                    >Add to Cart</a
+                  <button href="#" id="add-btn-3" class="bookcart btn btn-primary"
+                    >Add to Cart</button
                   >
                 </div>
               </div>
@@ -220,8 +162,8 @@
                 <div class="card-body">
                   <h6 class="card-title">Database Management System</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-4" class="bookcart btn btn-primary"
-                    >Add to Cart</a
+                  <button href="#" id="add-btn-4" class="bookcart btn btn-primary"
+                    >Add to Cart</button
                   >
                 </div>
               </div>
@@ -234,8 +176,8 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Database Programming</h6>
                   <p class="card-text">$30</p>
-                  <a href="#" id="add-btn-5" class="bookcart btn btn-primary"
-                    >Add to Cart</a
+                  <button href="#" id="add-btn-5" class="bookcart btn btn-primary"
+                    >Add to Cart</button
                   >
                 </div>
               </div>
@@ -250,8 +192,8 @@
                     >Essential of Web Database Development</h6
                   >
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-6" class="bookcart btn btn-primary"
-                    >Add to Cart</a
+                  <button href="#" id="add-btn-6" class="bookcart btn btn-primary"
+                    >Add to Cart</button
                   >
                 </div>
               </div>
