--- a/check-out.html
+++ b/check-out.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,61 +12,44 @@
     <link href="css/main.css" rel="stylesheet" />
 
     <!-- Bootstrap Core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
     <!--FontAwesome-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
 
-  <body>
+<body>
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">WALKABOOKS</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <div class="container">
+            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Home
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="books.html">Books</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about-us.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="registration.html">
-                <i class="fa fa-user-circle" style="font-size: 32px"></i>
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="cart.html">
-                <i class="fa fa-shopping-cart" style="font-size: 32px"></i
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="books.html">Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registration.html">
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="cart.html">
+                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i
                 ><span id="cart-icon-count">0</span></a
               >
             </li>
@@ -495,12 +479,12 @@
 
         <div class="pay_now form-group">
           <div class="price text-right" style="list-style: none;">
-            <li>BAG SUBTOTAL:</li> 
-            <li>FREE SHIPPING:</li>
-            <li>ESTIMATED TAX:</li>
+            <li>BAG SUBTOTAL: <span id="book-Total1">$0.00</span></li> 
+            <li>FREE SHIPPING: $0.00</li>
+            <li>ESTIMATED TAX: $0.00</li>
             <hr align="right" style="background-color: black; width: 25%;">
           </div>
-          <div class="total_price text-right" style="font-size: x-large;"><strong>Total</strong></div>
+          <div class="total_price text-right" style="font-size: x-large;"><strong>Total <span id="book-Total">$0.00</span></strong></div>
           <div class="col-md-12 col-sm-12 col-xs-12 mt-5 mb-5 text-right">
             <button type="submit" class="btn btn-primary btn-submit-fix"
               >Pay now</button
@@ -540,20 +524,19 @@
         <div class="social-footer">
           <h5>Follow us</h5>
           <ul>
-          <li><a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
-                 <li> <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a></li>
-              </ul>
+          <li><a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                    <li> <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a></li>
+                </ul>
 
-      </div>
-        <!--End of the Third Footer Column-->
+            </div>
+            <!--End of the Third Footer Column-->
 
-        <div class="contact-us-footer">
-          <ul class="contact">
-            <h5>Contact Us</h5>
-            <li
-              ><a href="#"
-                ><i class="fa fa-envelope" style="font-size: 30px"></i></a
+            <div class="contact-us-footer">
+                <ul class="contact">
+                    <h5>Contact Us</h5>
+                    <li><a href="#"><i class="fa fa-envelope" style="font-size: 30px"></i></a
             ></li>
             <li
               ><a href="#"
@@ -587,9 +570,8 @@
       <div class="copyright mt-3">
         <p class="m-0 text-center text-white"
           >Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
-          <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
-          <a href="#"> Site Map </a> |<a href="credits.html"
-            >Photo Credits</a
+                        <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
+                        <a href="#"> Site Map </a> |<a href="credits.html">Photo Credits</a
           ></p
         >
       </div>
